# meteodesk

./: .env.sample  .gitignore  README.md
meteodesk/: pyproject.toml
meteodesk/requirements/: README.md  base.txt  standalone.in  standalone.txt
meteodesk/src/meteodesk/: __init__.py  apps.py  manage.py  version.py  views.py  viewsets.py  wagtail_hooks.py
meteodesk/src/meteodesk/bulletin/: apps.py  views.py  viewsets.py
meteodesk/src/meteodesk/config/: urls.py  wsgi.py
meteodesk/src/meteodesk/config/settings/: base.py  dev.py
meteodesk/src/meteodesk/config/templates/: base.html
meteodesk/src/meteodesk/forecast/: apps.py  views.py  viewsets.py
meteodesk/src/meteodesk/home/: apps.py
meteodesk/src/meteodesk/home/migrations/: 0002_create_homepage.py
meteodesk/src/meteodesk/observation/: apps.py  views.py  viewsets.py
meteodesk/src/meteodesk/templates/meteodesk/: index.html
