[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meteodesk"
authors = [
    { name = "Erick Otenyo", email = "otenyo.erick@gmail.com" },
]
description = """Weather Production and Dissemination Tool"""
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django",
    "Framework :: Wagtail"
]


[project.urls]
Homepage = "https://github.com/wmo-raf/meteodesk"

[tool.black]
exclude = """
/(
  | migrations
  | generated
)/
"""
# ensure consistent formatting for black
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#required-version
# see https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#target-version
target-version = ["py311"]
required-version = "23"

[tool.setuptools]
include-package-data = true
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]

[project.scripts]
meteodesk = "meteodesk.manage:main"

#[tool.setuptools.package-data]

[tool.setuptools.packages.find]
namespaces = true
where = ["src/"]
include = ["meteodesk", "meteodesk.*"]

[tool.setuptools.dynamic]
# version always from the code
version = { attr = "meteodesk.version.__version__" }
dependencies = { file = ["requirements/base.txt"] }